--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.20.3",
-    "next": "^16.0.4",
-    "next-sanity": "^11.6.10",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "next": "14.2.15",
+    "next-sanity": "^9.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rss": "^1.2.2",
     "sanity": "^4.20.3",
     "styled-components": "^6.1.19"
