--- a/package.json
+++ b/package.json
@@ -24,22 +24,22 @@
     "@sanity/client": "^7.12.1",
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.2.0",
-    "@sanity/vision": "^4.20.3",
+    "@sanity/vision": "^3.0.0",
     "next": "14.2.15",
     "next-sanity": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rss": "^1.2.2",
-    "sanity": "^4.20.3",
+    "sanity": "^3.0.0",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
-    "@types/node": "^24.10.1",
-    "@types/react": "^19.2.4",
-    "@types/react-dom": "^19.2.3",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.4.22",
-    "eslint": "^9.39.1",
-    "eslint-config-next": "^16.0.3",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "14.2.15",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "typescript": "^5.9.3"
