--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@keystatic/core": "^0.5.48",
     "@keystatic/next": "^5.0.4",
     "next": "14.2.15",
+    "outstatic": "^2.0.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rss": "^1.2.2",
