--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "outstatic": "^1.4.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "rss": "^1.2.2",
     "styled-components": "^6.1.19"
   },
