--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/rss": "^0.0.32",
     "autoprefixer": "^10.4.22",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.2.15",
