Configure contact form to use Formspree

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ SANITY_API_VERSION=2025-01-01
 SANITY_USE_CDN=true
 # If you need a read token for server-side preview, add:
 # SANITY_READ_TOKEN=
+
+# Formspree configuration
+NEXT_PUBLIC_FORMSPREE_ID=
