--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "rss": "^1.2.2",
+    "rss-parser": "^3.13.0",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
