--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "14.2.15",
     "next-themes": "^0.4.6",
     "outstatic": "^1.4.14",
+    "puppeteer": "^24.35.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "remark": "^15.0.1",
